--- a/sample_config.env
+++ b/sample_config.env
@@ -1,20 +1,20 @@
 # Masukan APP ID ambil di web my.telegram.org
-APP_ID = "6"
+APP_ID = "14920956"
 
 # Masukan API HASH ambil di web my.telegram.org
-API_HASH = "eb06d4abfb49dc3eeb1aeb98ae0f581e"
+API_HASH = "be66635185652b3357ea82724409cee3"
 
 # Masukan BOT TOKEN dari @botfather
-TG_BOT_TOKEN = "10010102:2abcdefghij"
+TG_BOT_TOKEN = "5774415680:AAFiz4Pte2az3lIE6qdblOS4z4xk0j_6CFU"
 
 # Masukan User ID untuk hak ADMINS bot
-ADMINS = "1234567890"
+ADMINS = "5506341857"
 
 # Masukan Username Telegram mu tanpa @
-OWNER = "mrismanaziz"
+OWNER = "Arressikopat"
 
 # Masukan User id untuk hak owner
-OWNER_ID = "1234567890"
+OWNER_ID = "5506341857"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
@@ -22,15 +22,15 @@ FORCE_SUB_GROUP = 0
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = 1269814163
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 0
+FORCE_SUB_CHANNEL = 1709763411
 
 # Masukan ID Channel Untuk [Channel Database]
-CHANNEL_ID = -100
+CHANNEL_ID = -1001684272568
 
 # URL Database Anda, Ambil dari https://elephantsql.com
 # Contoh: "postgres://userbot:userbot@localhost:5432/userbot"
-DATABASE_URL = ""
+DATABASE_URL = "postgres://wmgyucnh:WLbSBUHMsyN1rYJVbrauOckq4zSp2LIT@satao.db.elephantsql.com/wmgyucnh"
