--- a/sample_config.env
+++ b/sample_config.env
@@ -18,15 +18,15 @@ OWNER_ID = "5506341857"
 
 # Masukan Chat ID dari Group Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_GROUP = 0
+FORCE_SUB_GROUP = -1001269814163
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 1269814163
+FORCE_SUB_CHANNEL = -1001269814163
 
 # Masukan Chat ID dari Channel Untuk Wajib Subscribenya
 # Bila tidak ingin dipakai Fsubnya, isi dengan 0
-FORCE_SUB_CHANNEL = 1709763411
+FORCE_SUB_CHANNEL = -1001709763411
 
 # Masukan ID Channel Untuk [Channel Database]
 CHANNEL_ID = -1001684272568
